# tcchs

./: .gitignore  CompileError.hs  Main.hs  Makefile  Parser.hs  README  README.md  SemanticChecker.hs  Stack.hs  Symbol.hs  Utils.hs  tcchs.cabal
CodeGen/: AsmCode.hs  CodeGenerator.hs  CompilationState.hs  Optimizer.hs
Syntax/: AST.hs  ShowAST.hs  Types.hs
spec/: SymbolSpec.hs
src/: CompileError.hs  Parser.hs  SemanticChecker.hs  Symbol.hs
src-exec/: Main.hs
src/CodeGen/: AsmCode.hs  CodeGenerator.hs
src/Syntax/: ShowAST.hs  ShowWithSymbol.hs
