name: tcchs
version: 0.1
author: Yuichiro Hanada
synopsis: Toy compiler for Tiny C.
cabal-version: >= 1.10
build-type: Simple

Library
    Hs-source-dirs: src
    Default-Language: Haskell2010
    Build-depends:  base >= 4 && < 5
                  , parsec
                  , containers
                  , mtl
                  , filepath

    Exposed-modules: Symbol
                     Parser
                     SemanticChecker
                     CompileError
                     CodeGen.AsmCode
                     CodeGen.CodeGenerator
                     CodeGen.CompilationState
                     Syntax.AST
                     Syntax.Types

    ghc-options: -Wall

executable tcchs
    Hs-source-dirs: src-exec
    main-is:    Main.hs
    Default-Language: Haskell2010
    build-depends:  base    >= 4 && < 5
                  , filepath
                  , parsec
                  , tcchs

    ghc-options:  -Wall

Test-Suite spec
    Type: exitcode-stdio-1.0
    Default-Language: Haskell2010
    Hs-source-dirs: spec
    Main-Is: Spec.hs
    Other-Modules: SymbolSpec
    Build-depends: base >= 4 && < 5
                 , hspec >= 1.3
                 , tcchs
